--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  margin: 0;
+  padding: 8px;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -20,6 +24,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  justify-content: flex-end;
 }
 
 .logo {
@@ -27,6 +32,9 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  display:flex;
+  justify-content: flex-start;
+  padding: 0 8px;
 }
 
 button {
@@ -45,4 +53,13 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
+}
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap:16px
 }
