--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -16,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px 15px;
 }
 
 input {
@@ -24,4 +28,60 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a {
+  color: #747474;
+}
+
+a:hover {
+  color:darkgrey;
+}
+a:visited {
+  color: darkgrey;
+}
+
+a:active{
+  color: lightblue;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  gap: 25px;
+}
+
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.right-links {
+  padding-right: 20px;
+}
+
+.image {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 5px;
+  flex-shrink: 0;
+}
+.input {
+  display: flex;
+  justify-content: center;
+}
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding: 0 5px;
+}
+
+.footer {
+  background-color: #EEEEEE;
 }
